
syntax = "proto3";

package auth;  // 패키지 이름을 지정

service AuthService {
  rpc ValidateToken (TokenRequest) returns (TokenResponse);
  rpc RegisterUser (CreateUserRequest) returns (UserResponse);
}

message TokenRequest {
  string accessToken = 1;
}

message TokenResponse {
  bool isValid = 1;
  string userId = 2;
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
}

message UserResponse {
  uint32 id = 1;
  string username = 2;
  string role = 3;
}
